srht/scss/highlight-dark.scss
.highlight .hll { background-color: #49483e !important }
.highlight  { background: #272822; color: #f8f8f2 !important }
.highlight .c { color: #75715e !important } /* Comment */
.highlight .err { color: #960050; background-color: #1e0010 !important } /* Error */
.highlight .k { color: #66d9ef !important } /* Keyword */
.highlight .l { color: #ae81ff !important } /* Literal */
.highlight .n { color: #f8f8f2 !important } /* Name */
.highlight .o { color: #f92672 !important } /* Operator */
.highlight .p { color: #f8f8f2 !important } /* Punctuation */
.highlight .cm { color: #75715e !important } /* Comment.Multiline */
.highlight .cp { color: #75715e !important } /* Comment.Preproc */
.highlight .c1 { color: #75715e !important } /* Comment.Single */
.highlight .cs { color: #75715e !important } /* Comment.Special */
.highlight .ge { font-style: italic !important } /* Generic.Emph */
.highlight .gs { font-weight: bold !important } /* Generic.Strong */
.highlight .kc { color: #66d9ef !important } /* Keyword.Constant */
.highlight .kd { color: #66d9ef !important } /* Keyword.Declaration */
.highlight .kn { color: #f92672 !important } /* Keyword.Namespace */
.highlight .kp { color: #66d9ef !important } /* Keyword.Pseudo */
.highlight .kr { color: #66d9ef !important } /* Keyword.Reserved */
.highlight .kt { color: #66d9ef !important } /* Keyword.Type */
.highlight .ld { color: #e6db74 !important } /* Literal.Date */
.highlight .m { color: #ae81ff !important } /* Literal.Number */
.highlight .s { color: #e6db74 !important } /* Literal.String */
.highlight .na { color: #a6e22e !important } /* Name.Attribute */
.highlight .nb { color: #f8f8f2 !important } /* Name.Builtin */
.highlight .nc { color: #a6e22e !important } /* Name.Class */
.highlight .no { color: #66d9ef !important } /* Name.Constant */
.highlight .nd { color: #a6e22e !important } /* Name.Decorator */
.highlight .ni { color: #f8f8f2 !important } /* Name.Entity */
.highlight .ne { color: #a6e22e !important } /* Name.Exception */
.highlight .nf { color: #a6e22e !important } /* Name.Function */
.highlight .nl { color: #f8f8f2 !important } /* Name.Label */
.highlight .nn { color: #f8f8f2 !important } /* Name.Namespace */
.highlight .nx { color: #a6e22e !important } /* Name.Other */
.highlight .py { color: #f8f8f2 !important } /* Name.Property */
.highlight .nt { color: #f92672 !important } /* Name.Tag */
.highlight .nv { color: #f8f8f2 !important } /* Name.Variable */
.highlight .ow { color: #f92672 !important } /* Operator.Word */
.highlight .w { color: #f8f8f2 !important } /* Text.Whitespace */
.highlight .mf { color: #ae81ff !important } /* Literal.Number.Float */
.highlight .mh { color: #ae81ff !important } /* Literal.Number.Hex */
.highlight .mi { color: #ae81ff !important } /* Literal.Number.Integer */
.highlight .mo { color: #ae81ff !important } /* Literal.Number.Oct */
.highlight .sb { color: #e6db74 !important } /* Literal.String.Backtick */
.highlight .sc { color: #e6db74 !important } /* Literal.String.Char */
.highlight .sd { color: #e6db74 !important } /* Literal.String.Doc */
.highlight .s2 { color: #e6db74 !important } /* Literal.String.Double */
.highlight .se { color: #ae81ff !important } /* Literal.String.Escape */
.highlight .sh { color: #e6db74 !important } /* Literal.String.Heredoc */
.highlight .si { color: #e6db74 !important } /* Literal.String.Interpol */
.highlight .sx { color: #e6db74 !important } /* Literal.String.Other */
.highlight .sr { color: #e6db74 !important } /* Literal.String.Regex */
.highlight .s1 { color: #e6db74 !important } /* Literal.String.Single */
.highlight .ss { color: #e6db74 !important } /* Literal.String.Symbol */
.highlight .bp { color: #f8f8f2 !important } /* Name.Builtin.Pseudo */
.highlight .vc { color: #f8f8f2 !important } /* Name.Variable.Class */
.highlight .vg { color: #f8f8f2 !important } /* Name.Variable.Global */
.highlight .vi { color: #f8f8f2 !important } /* Name.Variable.Instance */
.highlight .il { color: #ae81ff !important } /* Literal.Number.Integer.Long */
.highlight .gh { color: #619fef !important }

